--- a/src/components/UI/Text/Text.module.scss
+++ b/src/components/UI/Text/Text.module.scss
@@ -6,6 +6,15 @@
     &_title {
       @include font-title;
     }
+    &_result {
+      @include font-result;
+    }
+    &_text {
+      @include font-text;
+    }
+    &_font {
+      @include font-clear;
+    }
     // &_result {
     //   @include font-result;
     // }
