--- a/src/components/UI/Input/Input.module.scss
+++ b/src/components/UI/Input/Input.module.scss
@@ -1,5 +1,9 @@
+@import '../../../assets/styles/fonts.scss';
+
 .input {
-  width: 80px;
+  @extend %font-inter;
+  font-size: 16px;
+  width: 120px;
   height: 32px;
   padding: 8px;
   border: none;
@@ -7,13 +11,10 @@
   border-radius: 6px;
   box-shadow: 0 -1px 0 rgba(0, 0, 0, 0.3), 0 1px 2px rgba(0, 0, 0, 0.2) inset;
   transition: all 0.15s ease-in-out;
-  &:focus {
-    box-shadow: 0 -1px 0 rgba(0, 0, 0, 0.3), 0 1px 2px rgba(0, 0, 0, 0.1) inset,
-      0 0 10px rgba(255, 255, 255, 0.9);
-    opacity: 1;
-  }
-}
-
-.input2 {
-  opacity: 0.75;
+  // opacity: 0.75;
+  // &:focus {
+  //   box-shadow: 0 -1px 0 rgba(0, 0, 0, 0.3), 0 1px 2px rgba(0, 0, 0, 0.1) inset,
+  //     0 0 10px rgba(255, 255, 255, 0.9);
+  //   opacity: 1;
+  // }
 }
